# analysis_pipeline_core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in
include/analysis_pipeline/core/data/: pipeline_data_product.h  pipeline_data_product_lock.h  pipeline_data_product_manager.h  pipeline_data_product_read_lock.h  pipeline_data_product_write_lock.h
include/analysis_pipeline/core/stages/: base_stage.h
include/analysis_pipeline/core/stages/data_management/: clear_products_stage.h
include/analysis_pipeline/core/stages/histograms/: th1_builder_stage.h
include/analysis_pipeline/core/stages/input/: base_input_stage.h
include/analysis_pipeline/core/stages/testing/: dummy_stage.h  random_data_generator_stage.h
include/context/: input_bundle.h
include/data/: pipeline_data_product.h  pipeline_data_product_lock.h  pipeline_data_product_manager.h
include/stages/: LinkDef.h  base_midas_unpacker_stage.h  base_stage.h  custom_unpacker_stage.h  default_midas_unpacker_stage.h  dummy_stage.h
include/stages/data_management/: clear_products_stage.h
include/stages/histograms/: th1_builder_stage.h
include/stages/input/: base_input_stage.h
include/stages/testing/: dummy_stage.h  random_data_generator_stage.h
include/stages/unpacking/: base_midas_unpacker_stage.h  custom_midas_unpacker_stage.h  default_midas_unpacker_stage.h
scripts/: build.sh  cleanup.sh  install.sh
scripts/environment/: detect_environment.sh
src/analysis_pipeline/core/data/: pipeline_data_product.cpp  pipeline_data_product_lock.cpp  pipeline_data_product_manager.cpp  pipeline_data_product_read_lock.cpp  pipeline_data_product_write_lock.cpp
src/analysis_pipeline/core/stages/: base_stage.cpp
src/analysis_pipeline/core/stages/data_mangement/: clear_products_stage.cpp
src/analysis_pipeline/core/stages/histograms/: th1_builder_stage.cpp
src/analysis_pipeline/core/stages/testing/: dummy_stage.cpp  random_data_generator_stage.cpp
src/data/: pipeline_data_product.cpp  pipeline_data_product_lock.cpp  pipeline_data_product_manager.cpp
src/stages/: base_midas_unpacker_stage.cpp  base_stage.cpp  custom_unpacker_stage.cpp  default_midas_unpacker_stage.cpp  dummy_stage.cpp
src/stages/data_mangement/: clear_products_stage.cpp
src/stages/histograms/: th1_builder_stage.cpp
src/stages/testing/: dummy_stage.cpp  random_data_generator_stage.cpp
src/stages/unpacking/: base_midas_unpacker_stage.cpp  custom_midas_unpacker_stage.cpp  default_midas_unpacker_stage.cpp
